objects/ASI_CRM_T2_Receive__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Buyin_Vol__c</fullName>
        <formula>ASI_CRM_PR_Direct__c  +  ASI_CRM_T1_Depletion__c  -  ASI_CRM_T1_Depletion_lessthan_50ml__c  -  ASI_CRM_PR_Direct_lessthan_50ml__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyin Vol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region_Code__c</fullName>
        <label>Greater Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Direct__c</fullName>
        <label>PR Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PR_Direct_lessthan_50ml__c</fullName>
        <label>PR Direct (&lt;= 50ml)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Category__c</fullName>
        <formula>ASI_CRM_Sub_brand__r.ASI_CRM_CN_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>T2 Receives</relationshipLabel>
        <relationshipName>T2_Receives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion__c</fullName>
        <label>T1 Depletion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T1_Depletion_lessthan_50ml__c</fullName>
        <label>T1 Depletion (&lt;= 50ml)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion__c</fullName>
        <label>T2 Depletion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Depletion_lessthan_50ml__c</fullName>
        <label>T2 Depletion (&lt;=50ml)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_T2_Receive_Vol__c</fullName>
        <label>T2 Receive Vol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS Name</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>T2 Receives</relationshipLabel>
        <relationshipName>T2_Receives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Tier__c</fullName>
        <label>WS Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>T2 Receive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T2 Receives</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_T2_Receive</fullName>
        <active>true</active>
        <label>ASI_CRM_CN_T2_Receive</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>